// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkins component should display the cancellations doughnut chart properly 1`] = `
<div
  className="donut-chart overlay-container"
>
  <div
    className="chart-header"
  >
    <p>
      Pie Chart
    </p>
    <div
      className="hint"
    >
      <ThemedTooltippedComponent
        className=""
        composeTheme="deeply"
        mapThemrProps={[Function]}
        theme={null}
        tooltip=""
        tooltipDelay={0}
        tooltipHideOnClick={true}
        tooltipPosition="top"
        tooltipShowOnClick={true}
      >
        <img
          alt="help icon"
          src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2Fhelp_outline_24px.svg?alt=media&token=839e3137-c29e-463d-9a68-361e28794911"
        />
      </ThemedTooltippedComponent>
      <div
        className="hint-text"
      >
        <p />
      </div>
    </div>
  </div>
  <div
    className="chart-content"
  >
    <div
      className="diagram"
    >
      <Doughnut
        data={
          Object {
            "datasets": Array [
              Object {
                "backgroundColor": null,
                "data": Array [
                  0,
                  10,
                ],
              },
            ],
            "labels": Array [
              "Checkins",
              "Bookings",
            ],
            "text": "23%",
          }
        }
        height={160}
        options={
          Object {
            "cutoutPercentage": 70,
            "legend": Object {
              "display": false,
            },
          }
        }
        width={160}
      />
      <p
        className="no-info-percentage"
      >
        0
        %
      </p>
    </div>
  </div>
</div>
`;

exports[`Checkins component should render properly 1`] = `
<div
  className="donut-chart overlay-container"
>
  <div
    className="chart-header"
  >
    <p>
      Pie Chart
    </p>
    <div
      className="hint"
    >
      <ThemedTooltippedComponent
        className=""
        composeTheme="deeply"
        mapThemrProps={[Function]}
        theme={null}
        tooltip=""
        tooltipDelay={0}
        tooltipHideOnClick={true}
        tooltipPosition="top"
        tooltipShowOnClick={true}
      >
        <img
          alt="help icon"
          src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2Fhelp_outline_24px.svg?alt=media&token=839e3137-c29e-463d-9a68-361e28794911"
        />
      </ThemedTooltippedComponent>
      <div
        className="hint-text"
      >
        <p />
      </div>
    </div>
  </div>
  <div
    className="chart-content"
  >
    <div
      className="diagram"
    >
      <Doughnut
        data={
          Object {
            "datasets": Array [
              Object {
                "backgroundColor": null,
                "data": Array [
                  0,
                  10,
                ],
              },
            ],
            "labels": Array [
              "Checkins",
              "Bookings",
            ],
            "text": "23%",
          }
        }
        height={160}
        options={
          Object {
            "cutoutPercentage": 70,
            "legend": Object {
              "display": false,
            },
          }
        }
        width={160}
      />
      <p
        className="chart-percentage"
      >
        0
        %
      </p>
    </div>
    <div
      className="chart-text"
    >
      <p>
        0/10
      </p>
      <p>
        Meetings
      </p>
    </div>
  </div>
</div>
`;
